--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Standard Soluções Inteligentes</title>
+  <title>JNAVES Transportes e locações</title>
   <style>
     * {
       margin: 0;
@@ -13,8 +13,8 @@
     }
 
     body {
-      background-color: #6baad7;
-      color: #333;
+      background-color: #009a39;
+      color: #000;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -24,7 +24,7 @@
     .container {
       max-width: 480px;
       width: 100%;
-      background: #b7cfe3;
+      background: #000;
       border-radius: 12px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
       padding: 30px 20px;
@@ -55,7 +55,7 @@
     .btn {
       display: block;
       width: 100%;
-      background-color: #0e76a8;
+      background-color: #f7a508;
       color: #fff;
       padding: 14px;
       margin: 10px 0;
@@ -69,7 +69,7 @@
     }
 
     .btn:hover {
-      background-color: #095a85;
+      background-color: #ffbf47;
     }
 
     .catalog-preview {
@@ -103,11 +103,11 @@
   <div class="container">
     <img src="./Logo.jpeg" alt="Logo da empresa" class="logo" id="companyLogo">
 
-    <h1><T>Standard</T> Soluções Inteligentes</h1>
+    <h1><T>J.NAVES</T> Transportes e locações</h1>
     <p>Conectando tecnologia e praticidade ao seu negócio.</p>
 
-    <a href="https://www.instagram.com/standardsolucoesinteligentes?igsh=MXRxZHJhaTFsczlkcQ==" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
-    <a href="tel:+5544998649619" class="btn">📞 Ligar Agora</a>
+    <a href="https://www.instagram.com/jonathan.naves?igsh=NjF1cjczNGhmZTI2" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
+    <a href="tel:+5534999675484" class="btn">📞 Ligar Agora</a>
     <a href="https://wa.me/c/554498646919" class="btn" target="_blank">📱 Catálogo WhatsApp</a>
 
     <div class="catalog-preview" id="catalogPreview">
