--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       width: 150px;
       height: 150px;
       margin: 0 auto 20px;
-      border-radius: 50%;
+      border-radius: 10%;
       object-fit: cover;
       border: 3px solid #0e76a8;
     }
@@ -108,7 +108,7 @@
 
     <a href="https://www.instagram.com/jonathan.naves?igsh=NjF1cjczNGhmZTI2" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
     <a href="tel:+5534999675484" class="btn">📞 Ligar Agora</a>
-    <a href="https://wa.me/c/554498646919" class="btn" target="_blank">📱 Catálogo WhatsApp</a>
+    <a href="https://wa.me/c/5534999675484" class="btn" target="_blank">📱 WhatsApp</a>
 
     <div class="catalog-preview" id="catalogPreview">
       <!-- Imagens do catálogo serão inseridas via JS -->
