--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
 
     .logo {
-      
+      width: 300px;
       height: 150px;
       margin: 0 auto 20px;
       border-radius: 10%;
@@ -106,7 +106,7 @@
     <h1><T>J.NAVES</T> Transportes e locações</h1>
     <p>Conectando tecnologia e praticidade ao seu negócio.</p>
 
-    <a href="https://www.instagram.com/jonathan.naves?igsh=NjF1cjczNGhmZTI2" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
+    <a href="https://www.instagram.com/jnaveslocacoes?igsh=d3o5d3MxYzB2Z3Vq&utm_source=qr" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
     <a href="tel:+5534999675484" class="btn">📞 Ligar Agora</a>
     <a href="https://wa.me/c/5534999675484" class="btn" target="_blank">📱 WhatsApp</a>
 
