--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
     <a href="https://www.instagram.com/jnaveslocacoes?igsh=d3o5d3MxYzB2Z3Vq&utm_source=qr" class="btn" target="_blank"> <img width="25" height="25" src="https://img.icons8.com/3d-fluency/94/instagram-new.png" alt="instagram-new"/> Instagram</a>
     <a href="tel:+5534999675484" class="btn">📞 Ligar Agora</a>
-    <a href="https://wa.me/c/5534999675484" class="btn" target="_blank">📱 WhatsApp</a>
+    <a href="https://wa.me/5534999675484" class="btn" target="_blank">📱 WhatsApp</a>
 
     <div class="catalog-preview" id="catalogPreview">
       <!-- Imagens do catálogo serão inseridas via JS -->
