--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     
     .logo {
       width: 350px;
-      height: 150px;
+      height: 130px;
       margin: 0 auto 20px;
-      border-radius: 20%;
+      border-radius: 40px;
       object-fit: cover;
       border: 3px solid #0e76a8;
     }
