correção frase footer

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </div>
 
   <footer>
-    &copy; 2025 Standard Soluções Inteligentes. Todos os direitos reservados.
+    &copy; 2025 J.NAVES Transportes e locações. Todos os direitos reservados.
   </footer>
 
   <script>
