--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
     }
     
     .logo {
-      width: 350px;
-      height: 130px;
+      max-width: 350px;
+      max-height: 130px;
+      width: 80vw;
       margin: 0 auto 20px;
       border-radius: 40px;
       object-fit: cover;
